<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3A2C2C"
    tools:context=".MainMenuActivity">

    <!-- TOP BAR -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topbar"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="#5A3E36"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/AniGuess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:text="@string/title"
            android:textColor="#F4D35E"
            android:textSize="25sp"
            android:textStyle="bold"
            android:letterSpacing="0.1"
            android:shadowColor="#2A1E1E"
            android:shadowRadius="6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <!-- CENTER IMAGE -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topbar" />


    <!-- PLAY BUTTON -->
    <Button
        android:id="@+id/playbtn"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#EE964B"
        android:fontFamily="@font/aldrich"
        android:text="@string/PlayButton"
        android:textColor="#FFF8E7"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />


    <!-- DIFFICULTY TEXT -->
    <TextView
        android:id="@+id/difftxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/difficulty"
        android:textColor="#FFF8E7"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playbtn" />


    <!-- DIFFICULTY BUTTONS -->
    <Button
        android:id="@+id/easybtn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:backgroundTint="#EE964B"
        android:fontFamily="@font/aldrich"
        android:text="@string/easy"
        android:textColor="#FFF8E7"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@id/medbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/difftxt" />

    <Button
        android:id="@+id/medbtn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:backgroundTint="#EE964B"
        android:fontFamily="@font/aldrich"
        android:text="@string/med"
        android:textColor="#FFF8E7"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@id/hardbtn"
        app:layout_constraintStart_toEndOf="@id/easybtn"
        app:layout_constraintTop_toBottomOf="@id/difftxt" />

    <Button
        android:id="@+id/hardbtn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:backgroundTint="#EE964B"
        android:fontFamily="@font/aldrich"
        android:text="@string/hard"
        android:textColor="#FFF8E7"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/medbtn"
        app:layout_constraintTop_toBottomOf="@id/difftxt" />

    <!-- TIME RECORDS BOX -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/recordsBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:background="#5A3E36"
        app:layout_constraintBottom_toTopOf="@id/botbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/medbtn">

        <TextView
            android:id="@+id/recordTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/aldrich"
            android:text="TIME RECORDS"
            android:textColor="#F4D35E"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintTop_toBottomOf="@id/recordTitle"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/easyRecord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aldrich"
                android:text="Easy Mode: --"
                android:textColor="#FFF8E7"
                android:textSize="14sp"
                android:paddingBottom="8dp" />

            <TextView
                android:id="@+id/medRecord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aldrich"
                android:text="Medium Mode: --"
                android:textColor="#FFF8E7"
                android:textSize="14sp"
                android:paddingBottom="8dp" />

            <TextView
                android:id="@+id/hardRecord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aldrich"
                android:text="Hard Mode: --"
                android:textColor="#FFF8E7"
                android:textSize="14sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <!-- BOTTOM BAR -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/botbar"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="#5A3E36"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/homebtn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:backgroundTint="#EE964B"
            app:icon="@drawable/home"
            app:iconSize="30dp"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconTint="#000000"
            android:text=""
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/statsbtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/hometxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:text="HOME"
            android:textColor="#FFF8E7"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@id/homebtn"
            app:layout_constraintStart_toStartOf="@id/homebtn"
            app:layout_constraintTop_toBottomOf="@id/homebtn" />


        <Button
            android:id="@+id/statsbtn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:backgroundTint="#EE964B"
            app:icon="@drawable/gallery"
            app:iconSize="30dp"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconTint="#000000"
            android:text=""
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/settingbtn"
            app:layout_constraintStart_toEndOf="@id/homebtn"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/gallerytxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:text="GALLERY"
            android:textColor="#FFF8E7"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@id/statsbtn"
            app:layout_constraintStart_toStartOf="@id/statsbtn"
            app:layout_constraintTop_toBottomOf="@id/statsbtn" />

        <Button
            android:id="@+id/settingbtn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:backgroundTint="#EE964B"
            app:icon="@drawable/setting"
            app:iconSize="30dp"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconTint="#000000"
            android:text=""
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/statsbtn"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/settingtxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:text="SETTING"
            android:textColor="#FFF8E7"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@id/settingbtn"
            app:layout_constraintStart_toStartOf="@id/settingbtn"
            app:layout_constraintTop_toBottomOf="@id/settingbtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>